Add more generic components

--- a/src/reactIndex.html
+++ b/src/reactIndex.html
@@ -1,6 +1,7 @@
 <head>
     <script src="http://github.hubspot.com/odometer/odometer.js"></script>
     <link rel="stylesheet" href="http://github.hubspot.com/odometer/themes/odometer-theme-car.css" />
+    <link rel="stylesheet" href="main.css" />
 </head>
 <body>
     <div id="container">
