--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
     <div class="controls">
         <md-content style="margin: 16px; padding:16px">
             <h3>Budget Breakdown</h3>
-            <div ng-repeat="agency in budget">
+            <div class="budgetItem" ng-repeat="agency in budget">
                 <div layout>
                     <div ng-click="agency.showSubItems = !agency.showSubItems" flex="50" layout layout-align="right right">
                         <span class="md-body-1">{{agency.name}}</span>
@@ -65,7 +65,7 @@
                     {{formatAsUsd(agency.amount)}}
                 </div>
                 <div class="padleft" ng-show="agency.showSubItems">
-                    <div ng-repeat="bureau in agency.bureaus">
+                    <div class="budgetItem" ng-repeat="bureau in agency.bureaus">
                         <div layout>
                             <div ng-click="bureau.showSubItems = !bureau.showSubItems"flex="50" layout layout-align="right right">
                                 <span class="md-body-1">{{bureau.name}}</span>
@@ -74,7 +74,7 @@
                             {{formatAsUsd(bureau.amount)}}
                         </div>
                         <div class="padleft" ng-show="bureau.showSubItems">
-                            <div ng-repeat="account in bureau.accounts">
+                            <div class="budgetItem" ng-repeat="account in bureau.accounts">
                                 <div layout>
                                     <div flex="50" layout layout-align="right right">
                                         <span class="md-body-1">{{account.name}}</span>
