Rename odometer variable

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     <div>
         <div class="header_div">
             <h1>America's National Debt</h1>
-            <div id="odometer" class="odometer">{{debtCounter}}</div>
+            <div id="odometer" class="odometer"></div>
         </div>
     </div>
     <div class="controls">
