Separate out expenses and income

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
     <div class="controls">
         <md-content style="margin: 16px; padding:16px">
             <h3>Budget Breakdown</h3>
-            <div class="budgetItem" ng-repeat="agency in budget">
+            <div class="budgetItem" ng-repeat="agency in expenses">
                 <div layout>
                     <div ng-click="agency.showSubItems = !agency.showSubItems" flex="50" layout layout-align="right right">
                         <span class="md-body-1">{{agency.name}}</span>
