--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,40 @@
     </div>
     <div class="controls">
         <md-content style="margin: 16px; padding:16px">
-            <h3>Budget Breakdown</h3>
+            <h2>Budget Breakdown</h2>
+            <h3>Income</h3>
+            <div class="budgetItem" ng-repeat="agency in income">
+                <div layout>
+                    <div ng-click="agency.showSubItems = !agency.showSubItems" flex="50" layout layout-align="right right">
+                        <span class="md-body-1">{{agency.name}}</span>
+                    </div>
+                    <md-slider flex min="0" max="20000000" ng-model="agency.amount" aria-label="red" id="red-slider" class="md-primary" ng-mouseup="onSliderMouseUp('agency', agency)" ></md-slider>
+                    {{formatAsUsd(agency.amount)}}
+                </div>
+                <div class="padleft" ng-show="agency.showSubItems">
+                    <div class="budgetItem" ng-repeat="bureau in agency.bureaus">
+                        <div layout>
+                            <div ng-click="bureau.showSubItems = !bureau.showSubItems"flex="50" layout layout-align="right right">
+                                <span class="md-body-1">{{bureau.name}}</span>
+                            </div>
+                            <md-slider flex min="0" max="20000000" ng-model="bureau.amount" aria-label="red" id="red-slider" class="md-ascent" ng-mouseup="onSliderMouseUp('bureau', bureau)" ></md-slider>
+                            {{formatAsUsd(bureau.amount)}}
+                        </div>
+                        <div class="padleft" ng-show="bureau.showSubItems">
+                            <div class="budgetItem" ng-repeat="account in bureau.accounts">
+                                <div layout>
+                                    <div flex="50" layout layout-align="right right">
+                                        <span class="md-body-1">{{account.name}}</span>
+                                    </div>
+                                    <md-slider flex min="0" max="20000000" ng-model="account.amount" aria-label="red" id="red-slider" class="md-warn" ng-mouseup="onSliderMouseUp('account', account)" ></md-slider>
+                                    {{formatAsUsd(account.amount)}}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h3>Expenses</h3>
             <div class="budgetItem" ng-repeat="agency in expenses">
                 <div layout>
                     <div ng-click="agency.showSubItems = !agency.showSubItems" flex="50" layout layout-align="right right">
