--- a/src/index.html
+++ b/src/index.html
@@ -52,75 +52,79 @@
     <div class="controls">
         <md-content style="margin: 16px; padding:16px">
             <h2>Budget Breakdown</h2>
-            <h3>Income</h3>
-            <div class="budgetItem" ng-repeat="agency in income">
-                <div layout>
-                    <div ng-click="agency.showSubItems = !agency.showSubItems" flex="50" layout layout-align="right right">
-                        <span class="md-body-1">{{agency.name}}</span>
-                    </div>
-                    <md-slider flex min="0" max="20000000" ng-model="agency.amount" aria-label="red" id="red-slider" class="md-primary" ng-mouseup="onSliderMouseUp('agency', agency)" ></md-slider>
-                    {{formatAsUsd(agency.amount)}}
-                </div>
-                <div class="padleft" ng-show="agency.showSubItems">
-                    <div class="budgetItem" ng-repeat="bureau in agency.bureaus">
-                        <div layout>
-                            <div ng-click="bureau.showSubItems = !bureau.showSubItems"flex="50" layout layout-align="right right">
-                                <span class="md-body-1">{{bureau.name}}</span>
-                            </div>
-                            <md-slider flex min="0" max="20000000" ng-model="bureau.amount" aria-label="red" id="red-slider" class="md-ascent" ng-mouseup="onSliderMouseUp('bureau', bureau)" ></md-slider>
-                            {{formatAsUsd(bureau.amount)}}
+            <details>
+                <summary><h3>Income</h3></summary>
+                <div class="budgetItem" ng-repeat="agency in income">
+                    <div layout>
+                        <div ng-click="agency.showSubItems = !agency.showSubItems" flex="50" layout layout-align="right right">
+                            <span class="md-body-1">{{agency.name}}</span>
                         </div>
-                        <div class="padleft" ng-show="bureau.showSubItems">
-                            <div class="budgetItem" ng-repeat="account in bureau.accounts">
-                                <div layout>
-                                    <div flex="50" layout layout-align="right right">
-                                        <span class="md-body-1">{{account.name}}</span>
+                        <md-slider flex min="0" max="20000000" ng-model="agency.amount" aria-label="red" id="red-slider" class="md-primary" ng-mouseup="onSliderMouseUp('agency', agency)" ></md-slider>
+                        {{formatAsUsd(agency.amount)}}
+                    </div>
+                    <div class="padleft" ng-show="agency.showSubItems">
+                        <div class="budgetItem" ng-repeat="bureau in agency.bureaus">
+                            <div layout>
+                                <div ng-click="bureau.showSubItems = !bureau.showSubItems"flex="50" layout layout-align="right right">
+                                    <span class="md-body-1">{{bureau.name}}</span>
+                                </div>
+                                <md-slider flex min="0" max="20000000" ng-model="bureau.amount" aria-label="red" id="red-slider" class="md-ascent" ng-mouseup="onSliderMouseUp('bureau', bureau)" ></md-slider>
+                                {{formatAsUsd(bureau.amount)}}
+                            </div>
+                            <div class="padleft" ng-show="bureau.showSubItems">
+                                <div class="budgetItem" ng-repeat="account in bureau.accounts">
+                                    <div layout>
+                                        <div flex="50" layout layout-align="right right">
+                                            <span class="md-body-1">{{account.name}}</span>
+                                        </div>
+                                        <md-slider flex min="0" max="20000000" ng-model="account.amount" aria-label="red" id="red-slider" class="md-warn" ng-mouseup="onSliderMouseUp('account', account)" ></md-slider>
+                                        {{formatAsUsd(account.amount)}}
                                     </div>
-                                    <md-slider flex min="0" max="20000000" ng-model="account.amount" aria-label="red" id="red-slider" class="md-warn" ng-mouseup="onSliderMouseUp('account', account)" ></md-slider>
-                                    {{formatAsUsd(account.amount)}}
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <h3>Expenses</h3>
-            <div class="budgetItem" ng-repeat="agency in expenses">
-                <div layout>
-                    <div ng-click="agency.showSubItems = !agency.showSubItems" flex="50" layout layout-align="right right">
-                        <span class="md-body-1">{{agency.name}}</span>
-                    </div>
-                    <md-slider flex min="0" max="20000000" ng-model="agency.amount" aria-label="red" id="red-slider" class="md-primary" ng-mouseup="onSliderMouseUp('agency', agency)" ></md-slider>
-                    {{formatAsUsd(agency.amount)}}
-                </div>
-                <div class="padleft" ng-show="agency.showSubItems">
-                    <div class="budgetItem" ng-repeat="bureau in agency.bureaus">
-                        <div layout>
-                            <div ng-click="bureau.showSubItems = !bureau.showSubItems"flex="50" layout layout-align="right right">
-                                <span class="md-body-1">{{bureau.name}}</span>
-                            </div>
-                            <md-slider flex min="0" max="20000000" ng-model="bureau.amount" aria-label="red" id="red-slider" class="md-ascent" ng-mouseup="onSliderMouseUp('bureau', bureau)" ></md-slider>
-                            {{formatAsUsd(bureau.amount)}}
+            </details>
+            <details>
+                <summary><h3>Expenses</h3></summary>
+                <div class="budgetItem" ng-repeat="agency in expenses">
+                    <div layout>
+                        <div ng-click="agency.showSubItems = !agency.showSubItems" flex="50" layout layout-align="right right">
+                            <span class="md-body-1">{{agency.name}}</span>
                         </div>
-                        <div class="padleft" ng-show="bureau.showSubItems">
-                            <div class="budgetItem" ng-repeat="account in bureau.accounts">
-                                <div layout>
-                                    <div flex="50" layout layout-align="right right">
-                                        <span class="md-body-1">{{account.name}}</span>
+                        <md-slider flex min="0" max="20000000" ng-model="agency.amount" aria-label="red" id="red-slider" class="md-primary" ng-mouseup="onSliderMouseUp('agency', agency)" ></md-slider>
+                        {{formatAsUsd(agency.amount)}}
+                    </div>
+                    <div class="padleft" ng-show="agency.showSubItems">
+                        <div class="budgetItem" ng-repeat="bureau in agency.bureaus">
+                            <div layout>
+                                <div ng-click="bureau.showSubItems = !bureau.showSubItems"flex="50" layout layout-align="right right">
+                                    <span class="md-body-1">{{bureau.name}}</span>
+                                </div>
+                                <md-slider flex min="0" max="20000000" ng-model="bureau.amount" aria-label="red" id="red-slider" class="md-ascent" ng-mouseup="onSliderMouseUp('bureau', bureau)" ></md-slider>
+                                {{formatAsUsd(bureau.amount)}}
+                            </div>
+                            <div class="padleft" ng-show="bureau.showSubItems">
+                                <div class="budgetItem" ng-repeat="account in bureau.accounts">
+                                    <div layout>
+                                        <div flex="50" layout layout-align="right right">
+                                            <span class="md-body-1">{{account.name}}</span>
+                                        </div>
+                                        <md-slider flex min="0" max="20000000" ng-model="account.amount" aria-label="red" id="red-slider" class="md-warn" ng-mouseup="onSliderMouseUp('account', account)" ></md-slider>
+                                        {{formatAsUsd(account.amount)}}
                                     </div>
-                                    <md-slider flex min="0" max="20000000" ng-model="account.amount" aria-label="red" id="red-slider" class="md-warn" ng-mouseup="onSliderMouseUp('account', account)" ></md-slider>
-                                    {{formatAsUsd(account.amount)}}
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </details>
         </md-content>
     </div>
     <div class="info">
         <md-content style="margin: 16px; padding:16px">
-            <h3>Stats</h3>
+            <h2>Stats</h2>
             <div ng-repeat="stat in stats" ng-class="{expenses: stat.label == 'Expenses'}">
                 <div class="statText">
                     <h4>{{stat.label}}</h4>
@@ -133,7 +137,7 @@
             <div>
                 <h4 class="centered_text">Projected balance in 2050:</h4>
                 <h3 class="centered_text">{{formatAsUsd(projectedBalance)}}</h3>
-                <div class="centered_text">{{projectedBalance - currentBalance < 0 ? "Debt increased by" : "Debt decreased by"}} {{formatAsUsd(Math.abs(projectedBalance - currentBalance))}} ({{(projectedBalance - currentBalance) / projectedBalance * 100 | number: 2}}%)</div>
+                <div class="centered_text">{{projectedBalance - currentBalance < 0 ? "Debt increased by" : "Debt decreased by"}} {{formatAsUsd(Math.abs(projectedBalance - currentBalance))}} ({{Math.abs((projectedBalance - currentBalance) / projectedBalance * 100) | number: 2}}%)</div>
             </div>
         </md-content>
     </div>
